<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <Button
        android:id="@+id/btnUndo"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:background="@drawable/button"
        android:text="@string/undo"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glTop" />

    <Button
        android:id="@+id/btnGoToMenu"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:text="@string/go_to_menu"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glTop" />

    <TextView
        android:id="@+id/txvPlayerTurn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/player_turn"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/glTop"
        tools:layout_editor_absoluteX="133dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/txvPlayerTurn">

        <TableLayout
            android:id="@+id/tblChess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:measureWithLargestChild="true"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1">

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />

                <View android:background="@color/colorBlack" />

                <View android:background="@color/colorWhite" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>